// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-checkbox should be invoquable without parameters 1`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <div
    className="checkmark"
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should be programatically checkable 1`] = `
<Checkbox
  checked={true}
  className=""
  color="#7E7E7E"
  disabled={false}
  onToggle={[Function]}
>
  <button
    className="
            checkbox
            interactiveCheckbox
            
          "
    disabled={false}
    onClick={[Function]}
  >
    <Checkmark
      className="checkmark"
      color="#7E7E7E"
      height={15}
      width={15}
    >
      <svg
        className="checkmark"
        fill="#7E7E7E"
        height={15}
        viewBox="0 0 50 50"
        width={15}
      >
        <path
          d="M16.8 42c-.4 0-1-.2-1.2-.5l-14-14.2c-.8-.7-.8-1.8 0-2.5.6-.7 1.7-.7 2.4 0l12.8 13 29-29c.7-.7 1.8-.7 2.5 0s.7 1.8 0 2.5L18 41.5c-.2.3-.7.5-1.2.5z"
        />
      </svg>
    </Checkmark>
    <span
      className="children"
    />
  </button>
</Checkbox>
`;

exports[`fyndiq-component-checkbox should have prop checked 1`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
    height={15}
    width={15}
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should have prop color 1`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <Checkmark
    className="checkmark"
    color="red"
    height={15}
    width={15}
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should have prop disabled 1`] = `
<button
  className="
          checkbox
          false
          
        "
  disabled={true}
  onClick={[Function]}
>
  <div
    className="checkmark"
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should have prop onToggle 1`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <div
    className="checkmark"
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should update its state when clicked on 1`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <Checkmark
    className="checkmark"
    color="#7E7E7E"
    height={15}
    width={15}
  />
  <span
    className="children"
  />
</button>
`;

exports[`fyndiq-component-checkbox should update its state when clicked on 2`] = `
<button
  className="
          checkbox
          interactiveCheckbox
          
        "
  disabled={false}
  onClick={[Function]}
>
  <div
    className="checkmark"
  />
  <span
    className="children"
  />
</button>
`;
